--- a/css/main.css
+++ b/css/main.css
@@ -96,56 +96,146 @@ textarea {
 
 div#main-ctnr {
 background-image: url('../img/tlo.jpg');
+    background-position: 10px 10px;
 border:1px solid red;
 height:700px;
 width:1005px;
 position:relative;
 margin-left:auto;
 margin-right: auto;
+
 }
 div#top-menu {
+    background-image: url('../img/pasek_gorny.png');
 
-    border:1px solid green;
-    width:100%;
-    height:40px;
-    position:relative;
-    margin-top: 20px;
+    width:1026px;
+    height:60px;
+    position:absolute;
+    top:20px
+}
+
+div#top-menu a{
+    background-image: url('../img/pasek_gorny.png');
+    height:33px;
+    display:block;
+    position:absolute;
+    top:7px;
+    cursor:pointer;
+
+}
+
+div#top-menu a:hover{
+    background-image: url('../img/pasek_gorny_dots.png');
+
+}
+
+div#top-menu a#home{
+    width:85px;
+    left:8px;
+    background-position: -7px -6px;
+
+}
+div#top-menu a#Biography{
+    width:103px;
+    left:99px;
+    background-position: -98px -7px;
+}
+div#top-menu a#Top10{
+    width:107px;
+    left:207px;
+    background-position: -206px -8px;
+}
+div#top-menu a#Pictures{
+    width:103px;
+    left:319px;
+    background-position: -318px -9px;
+}
+div#top-menu a#Events{
+    width:99px;
+    left:427px;
+    background-position: -427px -8px;
+}
+div#top-menu a#Contact{
+    width:101px;
+    left:530px;
+    background-position: -531px -8px;
+}
+div#top-menu a#www{
+    width:378px;
+    left:629px;
+    background-position: -631px -8px;
 }
 div#booking {
+    background-image: url('../img/Booking.png');
 
-    border:1px solid green;
-    width:300px;
-    height:200px;
+    width:453px;
+    height:146px;
     position:absolute;
     right:0px;
     top:80px;
 
 }
 div#sound-cloud {
+    background-image: url('../img/Soundcloud.png');
 
-    border:1px solid green;
-    width:500px;
-    height:150px;
+    width:779px;
+    height:232px;
     position:absolute;
     right:0px;
     top:300px;
 
 }
-div#icons {
+div#rafael {
+    background-image: url('../img/rafael.png');
 
-    border:1px solid green;
-    width:400px;
-    height:30px;
+    width:408px;
+    height:107px;
+    position:absolute;
+    right:0px;
+    top:500px;
+}
+div#icons {
+    background-image: url('../img/Ikons.png');
+
+    width:630px;
+    height:76px;
     position:absolute;
     right:0px;
     top:500px;
 
 }
 
+div#icons a{
+    background-image: url('../img/Ikons.png');
+    border:1px solid red;
+    height:39px;
+    width:38px;
+    position:absolute;
+
+    top:17px;
+    display:block;
+}
+
+div#icons a#Beatport{
+    left:27px;
+}
+
+div#icons a#Soundcloud{
+    left:130px;
+}
 
 
+div#top-menu a#facebook{
 
-
+    width:85px;
+    left:8px;
+    background-position: -7px -6px;
+}
+div#top-menu a#Beatport{
+    width:85px;
+    left:8px;
+    background-position: -7px -6px;
+}
 
 
 
